# api-promocao

./: .env  Dockerfile  README.md  pyproject.toml  requiromets.txt
api_promo/: criar_tabelas.py  main.py
api_promo/api/: api.py
api_promo/api/endpoints/: avaliacao.py  conquista.py  curtida.py  departamento.py  estabelecimento.py  produto.py  promocao.py  upload_image.py  usuario.py  usuario_conquista.py  usuario_estabelecimento.py
api_promo/core/: auth.py  configs.py  database.py  deps.py
api_promo/models/: __all_models.py  avaliacao_model.py  conquista_model.py  curtida_model.py  departamento_model.py  estabelecimento_model.py  produto_model.py  promocao_model.py  usuario_conquista_model.py  usuario_estabelecimento_model.py  usuario_model.py
api_promo/schemas/: avaliacao_schema.py  conquista_schema.py  curtida_schema.py  departamento_schema.py  estabelecimento_schema.py  produto_schema.py  promocao_schema.py  usuario_conquista_schema.py  usuario_estabelecimento_schema.py  usuario_schema.py
api_promo/scrapers/: produto_scrap.py
tests/: test_api_promo.py
