[tool.poetry]
name = "api-promo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytz = "^2022.2.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.0"}
bcrypt = "^4.0.0"
bs4 = "^0.0.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
